<resources>
    <string name="app_name">MyMentor</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_title">Login</string>
    <string name="action_login_page_sign_up">Sign Up</string>
    <string name="login_page_sign_up_direction">Don\'t Have An Account?</string>
    <string name="or">OR</string>
    <string name="tv_signin_with_google">Continue with Google</string>
    <string name="register_title">Register</string>
    <string name="action_signup">Sign Up</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="signup_page_login_direction">Already have an account?</string>
    <string name="action_signup_page_login">Login</string>
    <string name="onboarding_desc_1">Connect with experienced mentors to grow your startup or business. Unlock the power of mentorship for success!</string>
    <string name="onboaring_title1">Welcome to My Mentor!</string>
    <string name="banner_1">Banner 1</string>
    <string name="start_growing">Start Growing!</string>
    <string name="banner_2">Banner 2</string>
    <string name="onboarding_title_2">Connect With Our Mentors!</string>
    <string name="onboarding_desc_2">Discover industry experts who align with your goals. Connect with the perfect mentor for your personalized guidance.</string>
    <string name="banner_3">Banner 3</string>
    <string name="onboarding_title_3">Accelerate Your Journey!</string>
    <string name="onboarding_desc_3">Tap into your full potential with My Mentor! Start your journey with us!</string>
    <string name="title_home">Home</string>
    <string name="title_feeds">Feeds</string>
    <string name="title_chat">Chats</string>
    <string name="title_events">Events</string>
    <string name="experiences_tab">Experiences</string>
    <string name="posts_tab">Posts</string>
    <string name="chat_now_button">Chat Now</string>
    <string name="home_welcome">Welcome,</string>
    <string name="home_recommended_mentors">Here are the mentors we recommend:</string>
    <string name="dummy_mentee_name">Emily Jones</string>
    <string name="dash">-</string>
    <string name="btn_edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="liked_posts">Liked posts</string>
    <string name="settings">Settings</string>
    <string name="manage_notification">Manage Notification</string>
    <string name="account">Account</string>
    <string name="under_development">Under Development</string>
    <string name="edit_profile_desc">This button will direct user to a new page where user can edit their profile (e.g., edit name and profile picture) </string>
    <string name="account_desc">This button will direct user to a new page where user can view their account information</string>
    <string name="manage_notification_desc">This button will direct user to a new page where user can manage the notifications received in the app</string>
    <string name="settings_desc">This button will direct user to a settings page</string>
    <string name="liked_posts_desc">This button will direct user to a new page where user can see all of the liked posts</string>
    <string-array name="dummy_mentor_name">
        <item>Esther Howard</item>
        <item>John Doe</item>
        <item>Sarah Anne</item>
        <item>Eric Yates</item>
    </string-array>
    <string-array name="dummy_mentor_position">
        <item>Business Analyst</item>
        <item>Operations Manager</item>
        <item>Front End Developer</item>
        <item>UI/UX Designer</item>
    </string-array>
    <string-array name="dummy_mentor_workplace">
        <item>Gojek</item>
        <item>Tokopedia</item>
        <item>Shopee</item>
        <item>Grab</item>
    </string-array>
    <string-array name="dummy_position">
        <item>Full Stack Developer</item>
        <item>UX Researcher</item>
        <item>Graphic Designer</item>
        <item>Operations Manager</item>
    </string-array>
    <string-array name="dummy_place">
        <item>Google</item>
        <item>Shopee</item>
        <item>Gojek</item>
        <item>Bank Central Asia</item>
    </string-array>
    <string-array name="dummy_start_date">
        <item>June 2020</item>
        <item>August 2018</item>
        <item>July 2014</item>
        <item>September 2012</item>
    </string-array>
    <string-array name="dummy_end_date">
        <item>Now</item>
        <item>April 2020</item>
        <item>May 2018</item>
        <item>March 2014</item>
    </string-array>
    <string-array name="dummy_logo">
        <item>https://w7.pngwing.com/pngs/326/85/png-transparent-google-logo-google-text-trademark-logo.png</item>
        <item>https://w7.pngwing.com/pngs/650/828/png-transparent-shopee-logo-thumbnail.png</item>
        <item>https://static-00.iconduck.com/assets.00/gojek-icon-512x512-dyy6mlv4.png</item>
        <item>https://1.bp.blogspot.com/-ghcXZfSaQBI/X6I02Zg-NfI/AAAAAAAAHaY/OxF9Klx83zQGKNETJ9qEnZCCmjsJ1DifQCLcBGAsYHQ/w640-h640/logo%2Bbank%2Bbca-01.png</item>
    </string-array>
    <string-array name="test">
        <item>aaa</item>
        <item>bbb</item>
        <item>ccc</item>
        <item>ddd</item>
        <item>eee</item>
    </string-array>
    <string name="questions">Questions</string>
    <string name="question_description">Question Description</string>
    <string name="questions_name">What do we call you?</string>
    <string name="next_question">Next Question</string>
    <string name="submit">Submit</string>
    <string name="hacker">Hacker</string>
    <string name="hustler">Hustler</string>
    <string name="hipster">Hipster</string>
    <string name="pick_personality">Pick Your Personality</string>
    <string name="pick_role">Pick Your Role</string>
    <string name="pick_position">Pick Your Position</string>
    <string name="select_one">Select One</string>
    <string name="mentee">Mentee</string>
    <string name="mentor">Mentor</string>
    <string name="input_experience">Input Years of Experience</string>
    <string name="data_analyst">Data Analyst</string>
    <string name="data_engineer">Data Engineer</string>
    <string name="data_scientist">Data Scientist</string>
    <string name="front_end_dev">Front-End Developer</string>
    <string name="back_end_dev">Back-End Developer</string>
    <string name="full_stack_dev">Full-Stack Developer</string>
    <string name="web_dev">Web Developer</string>
    <string name="software_engineer">Software Engineer</string>
    <string name="information_security">Information Security Analyst</string>
    <string name="ai_specialist">AI Specialist</string>
    <string name="comp_network_specialist">Computer Networking Specialist</string>
    <string name="database_admin">Database Administrator</string>
    <string name="business_development">Business Development</string>
    <string name="technopreneur">Technopreneur</string>
    <string name="business_consultant">Business Consultant</string>
    <string name="risk_manager">Risk Manager</string>
    <string name="product_manager">Product Manager</string>
    <string name="market_researcher">Market Researcher</string>
    <string name="financial_analyst">Financial Analyst</string>
    <string name="digital_marketing">Digital Marketing</string>
    <string name="entrepreneur">Entrepreneur</string>
    <string name="digital_business_analyst">Digital Business Analyst</string>
    <string name="operational_manager">Operational Manager</string>
    <string name="retail_manager">Retail Manager</string>
    <string name="business_executive">Business Executive</string>
    <string name="graphics_designer">Graphics Designer</string>
    <string name="uiux_designer">UI/UX Designer</string>
    <string name="product_developer">Product Developer</string>
    <string name="art_director">Art Director</string>
    <string name="web_designer">Web Designer</string>
    <string name="art_entrepreneur">Art Entrepreneur</string>
    <string name="question_count">\ of %d</string>
    <string name="done">Submit</string>
</resources>