<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_welcome_scene"
    tools:context=".ui.onboarding.WelcomeActivity">

    <TextView
        android:id="@+id/tv_welcome_title_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboaring_title1"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_banner_welcome_1" />

    <ImageView
        android:id="@+id/iv_banner_welcome_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/welcome_banner"
        android:contentDescription="@string/banner_1" />

    <TextView
        android:id="@+id/tv_onboardingDesc_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:alpha="0"
        android:gravity="center"
        android:text="@string/onboarding_desc_1"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/tv_welcome_title_1"
        app:layout_constraintStart_toStartOf="@id/tv_welcome_title_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_title_1" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tint="@color/main_purple"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintEnd_toStartOf="@id/menu2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_onboardingDesc_1"
        app:srcCompat="@drawable/ic_circle_24" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/main_purple"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/menu3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/menu1"
        app:layout_constraintTop_toTopOf="@+id/menu1"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_circle_24" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/main_purple"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/menu2"
        app:layout_constraintTop_toTopOf="@+id/menu2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_circle_24" />

    <Button
        android:id="@+id/btn_startGrowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:alpha="0"
        android:backgroundTint="@color/disabled_button_purple"
        android:text="@string/start_growing"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/menu2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_banner_welcome_2"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:contentDescription="@string/banner_2"
        android:src="@drawable/welcome_banner_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/tv_welcome_title_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_title_2"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@id/iv_banner_welcome_2"
        app:layout_constraintStart_toStartOf="@id/iv_banner_welcome_2"
        app:layout_constraintTop_toBottomOf="@+id/iv_banner_welcome_2" />

    <TextView
        android:id="@+id/tv_onboardingDesc_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/onboarding_desc_2"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/tv_welcome_title_2"
        app:layout_constraintStart_toStartOf="@id/tv_welcome_title_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_title_2" />

    <ImageView
        android:id="@+id/iv_banner_welcome_3"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:contentDescription="@string/banner_3"
        android:src="@drawable/welcome_banner_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_banner_welcome_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/tv_welcome_title_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_title_3"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@id/iv_banner_welcome_3"
        app:layout_constraintStart_toStartOf="@id/iv_banner_welcome_3"
        app:layout_constraintTop_toBottomOf="@+id/iv_banner_welcome_3" />

    <TextView
        android:id="@+id/tv_onboardingDesc_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/onboarding_desc_3"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/tv_welcome_title_3"
        app:layout_constraintStart_toStartOf="@id/tv_welcome_title_3"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_title_3" />

</androidx.constraintlayout.motion.widget.MotionLayout>